[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "helm-airgap-packager"
version = "0.1.0"
description = "Package Helm charts and Docker images for airgap deployment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.0",
    "PyYAML>=6.0",
]

[project.scripts]
helm-airgap = "packager.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["packager*"]
